--- a/server/views/manager.ejs
+++ b/server/views/manager.ejs
@@ -50,7 +50,7 @@
         <div class="manager-line">
             <div class="manager-nav"><a href="./getchecked"><button><i class="far fa-check-square"></i></button></a><h2>Get All Checked</h2></div>
             <div class="manager-nav"><a href="./countycalendar"><button class="add-user" id="county-calendar"><i class="far fa-calendar-alt"></i></button></a><h2>County Calendar</h2></div>
-            <div class="manager-nav">	&nbsp;</div>
+            <div class="manager-nav"><a href="./templates"><button><i class="fas fa-envelope-open-text"></i></button></a><h2>Templates</h2></div>
             <div class="manager-nav">	&nbsp;</div>
             <div class="manager-nav">	&nbsp;</div>
             <div class="manager-nav"><a><button class="add-user" id="logoff"><i class="fas fa-power-off"></i></button></a><h2>Logoff</h2></div>
