--- a/server/views/manager.ejs
+++ b/server/views/manager.ejs
@@ -26,31 +26,30 @@
     
     <section class="manager janela">
         <div class="manager-line">
-            <div class="manager-nav"><a href="./register"><button><i class="fas fa-user-plus"></i></button></a><h2>Create new user</h2></div>
-            <div class="manager-nav"><a href="./manager"><button><i class="fas fa-user-times"></i></button></a><h2>Delete user</h2></div>
+            <div class="manager-nav"><a href="./manageusers"><button><i class="fas fa-user"></i></button></a><h2>Manage users</h2></div>
             <div class="manager-nav"><a href="./allusers"><button><i class="fas fa-id-card"></i></button></a><h2>List all users</h2></div>
             <div class="manager-nav"><a href="./userlogs"><button><i class="fas fa-users"></i></button></a><h2>User logs</h2></div>
             <div class="manager-nav"><a href="./searchbyparcel"><button><i class="fas fa-search"></i></button></a><h2>Search By Parcel</h2></div>
             <div class="manager-nav"><a href="./searchbyuser"><button><i class="fas fa-search"></i></button></a><h2>Search By User</h2></div>
+            <div class="manager-nav"><a href="./searchbyrank"><button><i class="fas fa-search"></i></button></a><h2>Search By Rank</h2></div>
             
             
         </div>
         <div class="manager-line">
-            <div class="manager-nav"><a href="./searchbyrank"><button><i class="fas fa-search"></i></button></a><h2>Search By Rank</h2></div>
             <div class="manager-nav"><a href="./searchbycounty"><button><i class="fas fa-search"></i></button></a><h2>Search By County</h2></div>
             <div class="manager-nav"><a href="./searchbylisttype"><button><i class="fas fa-search"></i></button></a><h2>Search By Type</h2></div>
             <div class="manager-nav"><a href="./searchbyrankresumed"><button><i class="fas fa-search"></i></button></a><h2>Search By Rank</h2><h2>(Without Images)</h2></div>
             <div class="manager-nav"><a href="./resumedsearchbycounty"><button><i class="fas fa-search"></i></button></a><h2>Search By County</h2><h2>(Without Images)</h2></div>
             <div class="manager-nav"><a href="./metrics"><button><i class="fas fa-chart-pie"></i></button></a><h2>Metrics By User</h2></div>
-            
-            
-            
+            <div class="manager-nav"><a href="./getchecked"><button><i class="far fa-check-square"></i></button></a><h2>Get All Checked</h2></div>
+                                   
         </div>
 
         <div class="manager-line">
-            <div class="manager-nav"><a href="./getchecked"><button><i class="far fa-check-square"></i></button></a><h2>Get All Checked</h2></div>
+            
             <div class="manager-nav"><a href="./countycalendar"><button class="add-user" id="county-calendar"><i class="far fa-calendar-alt"></i></button></a><h2>County Calendar</h2></div>
             <div class="manager-nav"><a href="./templates"><button><i class="fas fa-envelope-open-text"></i></button></a><h2>Templates</h2></div>
+            <div class="manager-nav">	&nbsp;</div>
             <div class="manager-nav">	&nbsp;</div>
             <div class="manager-nav">	&nbsp;</div>
             <div class="manager-nav"><a><button class="add-user" id="logoff"><i class="fas fa-power-off"></i></button></a><h2>Logoff</h2></div>
