calendar by state

--- a/server/views/countycalendarbystate.ejs
+++ b/server/views/countycalendarbystate.ejs
@@ -26,10 +26,10 @@
     </header>
     <section class="controller janela">
              <form id="search-form">
-                <h2>Search</h2>
-                <div><label for="county">By County:</label><input type="text" id="countyinput" name="county"></div>
-                <div><label>Page:</label><input value="1" type="number" id="page" name=""></div>
-                <button class="search-button">SEARCH</button>
+                <h2>Production Calendar</h2>
+                <div><label for="state">By State:</label><input type="text" id="stateinput" name="state"></div>
+                
+                <button class="search-button">GET CALENDAR</button>
             </form>
     </section>
     <section class="program janela">
@@ -37,7 +37,8 @@
         </div>
 
     <script src="/js/manager-programs/manager.js" async></script>
-    <script src="/js/manager-controllers/searchbycounty.js" async></script>
+    <script src="/js/manager-controllers/countycalendarbystate.js" async></script>
     <script src="js/manager-programs/docx.js" async></script>
 </body>
 </html>
+
