--- a/server/views/getchecked.ejs
+++ b/server/views/getchecked.ejs
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/managerstyle.css">
     <script src="https://kit.fontawesome.com/30836ed2bd.js" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/docx@7.1.0/build/index.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/1.3.8/FileSaver.js"></script>
     <title>HUNTERFY MANAGER</title>
 </head>
 <body>
@@ -34,5 +36,6 @@
         <div class="itens-container">
         </div>
     <script src="js/manager-programs/getchecked.js" async></script>
+    <script src="js/manager-programs/docx.js" async></script>
 </body>
 </html>
