--- a/server/views/searchbycounty.ejs
+++ b/server/views/searchbycounty.ejs
@@ -27,6 +27,7 @@
     <section class="controller janela">
              <form id="search-form">
                 <h2>Search</h2>
+                <div><label for="state">By State:</label><input type="text" id="stateinput" name="state"></div>
                 <div><label for="county">By County:</label><input type="text" id="countyinput" name="county"></div>
                 <div><label>Page:</label><input value="1" type="number" id="page" name=""></div>
                 <button class="search-button">SEARCH</button>
