--- a/server/views/searchbycounty.ejs
+++ b/server/views/searchbycounty.ejs
@@ -31,6 +31,15 @@
                 <div><label for="county">By County:</label><input type="text" id="countyinput" name="county"></div>
                 <div><label>Page:</label><input value="1" type="number" id="page" name=""></div>
                 <button class="search-button">SEARCH</button>
+
+                <h2>Generate Letters For All Parcels</h2>
+                <div>
+                    <label for="">Template:</label>
+                    <select name="" id="templateforall" onfocus="loadTemplates(this)">
+                        <option value="">--</option>
+                    </select>
+                </div>
+                <button class="generate-letter">GENERATE FOR ALL</button>
             </form>
     </section>
     <section class="program janela">
