--- a/server/views/manager.ejs
+++ b/server/views/manager.ejs
@@ -37,21 +37,22 @@
         </div>
         <div class="manager-line">
             <div class="manager-nav"><a href="./searchbycounty"><button><i class="fas fa-search"></i></button></a><h2>Search By County</h2></div>
+            <div class="manager-nav"><a href="./searchbystatus"><button><i class="fas fa-search"></i></button></a><h2>Search By Status</h2></div>
             <div class="manager-nav"><a href="./searchbylisttype"><button><i class="fas fa-search"></i></button></a><h2>Search By Type</h2></div>
             <div class="manager-nav"><a href="./searchbyrankresumed"><button><i class="fas fa-search"></i></button></a><h2>Search By Rank</h2><h2>(Without Images)</h2></div>
             <div class="manager-nav"><a href="./resumedsearchbycounty"><button><i class="fas fa-search"></i></button></a><h2>Search By County</h2><h2>(Without Images)</h2></div>
             <div class="manager-nav"><a href="./metrics"><button><i class="fas fa-chart-pie"></i></button></a><h2>Metrics By User</h2></div>
-            <div class="manager-nav"><a href="./getchecked"><button><i class="far fa-check-square"></i></button></a><h2>Get All Checked</h2></div>
+            
                                    
         </div>
 
         <div class="manager-line">
-            
+            <div class="manager-nav"><a href="./getchecked"><button><i class="far fa-check-square"></i></button></a><h2>Get All Checked</h2></div>
             <div class="manager-nav"><a href="./countycalendar"><button id="county-calendar"><i class="far fa-calendar-alt"></i></button></a><h2>County Calendar</h2><h2>(By Date)</h2></div>
             <div class="manager-nav"><a href="./countycalendarbystate"><button id="county-calendar-by-state"><i class="far fa-calendar-alt"></i></button></a><h2>County Calendar</h2><h2>(By State)</h2></div>
             <div class="manager-nav"><a href="./templates"><button><i class="fas fa-envelope-open-text"></i></button></a><h2>Templates</h2></div>
             <div class="manager-nav">	&nbsp;</div>
-            <div class="manager-nav">	&nbsp;</div>
+            
             <div class="manager-nav"><a><button class="add-user" id="logoff"><i class="fas fa-power-off"></i></button></a><h2>Logoff</h2></div>
             
         </div>
