--- a/server/views/resumedsearchbycounty.ejs
+++ b/server/views/resumedsearchbycounty.ejs
@@ -32,6 +32,15 @@
                 <button class="search-button">SEARCH</button>
                 <button class="copy-button">COPY ALL PARCELS</button>
 
+                <h2>Generate Letters For All Parcels</h2>
+                <div>
+                    <label for="">Template:</label>
+                    <select name="" id="templateforall" onfocus="loadTemplates(this)">
+                        <option value="">--</option>
+                    </select>
+                </div>
+                <button class="generate-letter">GENERATE FOR ALL</button>
+
             </form>
     </section>
     <section class="program janela">
