--- a/server/views/searchbyrank.ejs
+++ b/server/views/searchbyrank.ejs
@@ -33,9 +33,18 @@
                     <div><input type="radio" name="ranktype" value="rank2"><label for="">Rank 2</label></div>
                     <div><input type="radio" name="ranktype" value="rank3"><label for="">Rank 3</label></div>
                 </div>
-                <div><label>And By Date:</label><input type="date" id="date" name=""></div>
+                <div style="display: none;"><label>And By Date:</label><input type="date" id="date" name=""></div>
                 <div><label>Page:</label><input value="1" type="number" id="page" name=""></div>
                 <button class="search-button">SEARCH</button>
+
+                <h2>Generate Letters For All Parcels</h2>
+                <div>
+                    <label for="">Template:</label>
+                    <select name="" id="templateforall" onfocus="loadTemplates(this)">
+                        <option value="">--</option>
+                    </select>
+                </div>
+                <button class="generate-letter">GENERATE FOR ALL</button>
             </form>
     </section>
     <section class="program janela">
