--- a/server/public/css/managerstyle.css
+++ b/server/public/css/managerstyle.css
@@ -72,11 +72,13 @@ body::-webkit-scrollbar-track {
 
 .controller{
     background-color: #272121;
-    height: 100vh;
+    height: 89vh;
     width: 10vw;
     position: fixed;
     z-index: 9;
     margin-top: 9vh;
+    overflow: scroll;
+    padding-bottom: 20vh;
 }
 
 .janela{
@@ -368,7 +370,11 @@ body::-webkit-scrollbar-track {
 
 .rank-button button{
     border: none;
-    background-color:#a14418;
+    border-radius: 0.5vh;
+    width: 80%;
+    height: 5vh;
+    background-color: #a14418;
+    margin-top: 1vh;
 }
 
 .rank-button button:hover{
@@ -472,7 +478,7 @@ form{
     border: none;
     border-radius: 0.5vh;
     width: 100%;
-    height: 5ch;
+    height: 5vh;
     background-color: #a14418;
     margin-top: 1vh;
 }
@@ -624,36 +630,6 @@ form{
     width: 100%;
     height: 100%;
 }
-/*
-.inv{
-    border: none;
-}
-#firstcolumn{
-    height: 20vh;
-}
-
-#firstcolumn img{
-    max-width: 80%;
-    max-height: 20vh;
-}
-
-#firstcolumn img:hover{
-    transform: scale(4);
-    transition: 0.5s;
-}
-
-.accordion ul li{
-    text-align: left;
-}
-
-.item div{
-    margin-top: 2vh;
-}
-
-.content .values .columns{
-    height: 10vh;
-} 
-*/
 
 .accordion{
     width: 100%;
@@ -801,22 +777,25 @@ form{
     width: 20%;
 }
 
-.casinha{
+.accordionbutton{
     width: 90%;
     display: flex;
     justify-content: center;
     font-size: 3vh;
 }
 
-.casinha i {
-    color: black;
+.accordionbutton i {
+    color: #272121;
+    height: 4vh;
+    padding: 1vh;
 }
 
-.casinha i:hover{
+.accordionbutton i:hover{
     cursor: pointer;
     transform: scale(1.1);
     transition: 0.5s;
 }
+
 
 /* login page */
 .login{
@@ -1130,4 +1109,70 @@ form{
     margin: 1vh 0;
 }
 
+.acq{
+    height: fit-content;
+    display: flex;
+    
+    
+}
 
+.acq label{
+    color: black;
+    margin-right: 0.2vh;
+}
+
+.acq h1{
+    color: black;
+    margin-right: 0.2vh;
+    font-weight: 600;
+    font-size: 3vh;
+}
+
+.acq .contrast{
+    padding: 1vh;
+    width: 19vw;
+}
+
+.acq div div{
+    width: 80%;
+    display: flex;
+    justify-content: space-between;
+    margin: 1vh 0;
+}
+
+.acq div input[type=text]{
+    width: 5vw;
+    border: none;
+    height: 4vh;
+    font-size: 2vh;
+    border-radius: 0.5vh;
+    padding: 0 1vh;
+}
+
+.acq button{
+    border: none;
+    border-radius: 0.5vh;
+    width: 80%;
+    height: 5vh;
+    background-color: #a14418;
+    margin-top: 1vh;
+
+}
+
+.acq button:hover{
+    cursor: pointer;
+    transform: scale(1.1);
+    transition: 0.5s;
+}
+
+.pdf-up{
+    color:#a14418;
+    font-size: 3vh;
+
+}
+
+.pdf-up:hover{
+    cursor: pointer;
+    transform: scale(1.1);
+    transition: 0.5s;
+}
