--- a/server/public/css/managerstyle.css
+++ b/server/public/css/managerstyle.css
@@ -112,8 +112,13 @@ body::-webkit-scrollbar-track {
 
 .program {
     background-color:#363333;
-    padding-left: 15vw;
+    padding-left: 16vw;
     height: 82vh;
+    padding-top: 14vh;
+}
+
+.program textarea{
+    border-radius: 3px;
 }
 
 .username{
@@ -617,6 +622,11 @@ form{
 .manager-nav:hover{
     transform: scale(1.1);
     transition: 0.5s;
+    cursor: pointer;
+}
+
+.manager-nav i:hover{
+    cursor: pointer;
 }
 
 .manager-nav button{
@@ -625,10 +635,55 @@ form{
     border: none;
 }
 
-.manager-nav button:hover{
-    cursor: pointer;
+.manager-nav h2{
+    font-size: 2vh;
+}
+
+.searchOptions{
+    position: absolute;
+    width: fit-content;
+    height: fit-content;
+    background-color: rgb(134, 134, 135);
+    padding: 1vh;
+    top: 25%;
+    right: 40%;
+    border-radius: 1vh;
+    display: none;
+}
+
+.searchOptions ul{
+    display: flex;
+    flex-direction: column;
+    padding: 8vh;
+    justify-content: center;
+    align-items: center;
+}
+
+.searchOptions ul a{
+    text-decoration: none;
+}
+
+.searchOptions ul li{
+    margin: 1vh 0;
+}
+
+#closeButtonDiv{
     width: 100%;
-    height: 100%;
+    display: flex;
+    justify-content: flex-end;
+    height: fit-content;
+}
+
+#closeButtonDiv button{
+    height: 3vh;
+    border: none;
+    border-radius: 1vh;
+    background-color: transparent;
+    font-size: 4vh;
+}
+
+#closeButtonDiv button:hover{
+    cursor: pointer;
 }
 
 .accordion{
@@ -1176,3 +1231,10 @@ form{
     transform: scale(1.1);
     transition: 0.5s;
 }
+
+.plusDiv{
+    background-color: rgba(255, 255, 255, 0.054);
+    border-radius: 1vh;
+    padding-bottom: 2vh;
+}
+
