--- a/server/views/searchbyflow.ejs
+++ b/server/views/searchbyflow.ejs
@@ -12,6 +12,8 @@
     <script src="https://kit.fontawesome.com/30836ed2bd.js" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/docx@7.1.0/build/index.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/1.3.8/FileSaver.js"></script>
+    
+
     <title>HUNTERFY MANAGER</title>
 </head>
 <body>
@@ -26,18 +28,39 @@
     </header>
     <section class="controller janela">
              <form id="search-form">
-                <div><label for="user">State:</label><input type="text" id="stateinput" name=""></div>
-                <div><label for="user">County:</label><input type="text" id="countyinput" name=""></div>
+                <h2>Search</h2>
+                <div>
+                    <label for="parcel">By Flow:</label>
+                    <select id="flowOptions">
+                        <option value="">--</option>
+                        <option value="Stage 1">Stage 1</option>
+                        <option value="Stage 2">Stage 2</option>
+                        <option value="Stage 3">Stage 3</option>
+                        <option value="Purchased">Purchased property</option>
+                        <option value="Sold">Property sold</option>
+                    </select>
+                </div>
                 <div><label>Page:</label><input value="1" type="number" id="page" name=""></div>
-                <button class="search-button">GET</button>
+                <button class="search-button">SEARCH</button>
+
+                <h2>Generate Letters For All Parcels</h2>
+                <div>
+                    <label for="">Template:</label>
+                    <select name="" id="templateforall" onfocus="loadTemplates(this)">
+                        <option value="">--</option>
+                    </select>
+                </div>
+                <button class="generate-letter">GENERATE FOR ALL</button>
             </form>
     </section>
     <section class="program janela">
+        <h2 class="username"></h2>
         <div class="itens-container">
         </div>
     </section>
+
     <script src="js/manager-programs/manager.js" async></script>
-    <script src="js/manager-controllers/getchecked.js" async></script>
+    <script src="js/manager-controllers/searchbyflow.js" async></script>
     <script src="js/manager-programs/docx.js" async></script>
 </body>
 </html>
