rank3 bug fixed and new 'insert ranks' tool

--- a/server/views/parcellist.ejs
+++ b/server/views/parcellist.ejs
@@ -27,23 +27,18 @@
     <section class="controller janela">
              <form id="search-form">
                 <h2>Parcel List</h2>
-                <div><label for="user">By User:</label><input type="text" id="user" name=""></div>
+                <div><label for="user">By User:</label><select name="" id="selectuser-parcellist"></select></div>
                 <button class="search-button">GET INFO</button>
             </form>
     </section>
-    <section class="program janela">
-        <h2 class="username"></h2>
+    <section class="program janela parcellist">
+        
         <div class="itens-container">
-            <div>
-                <h2>Insert New Parcels</h2>
-                <textarea name="" id="parcelsList" cols="30" rows="10"></textarea>
-                <div><label>County</label><input type="text"></div>
-                <div><label>State</label><input type="text"></div>
-                <button id="insert-parcels">Insert</button>
-            </div>
+            
+           
 
-            <h2>Parcel List For </h2>
-            <div></div>
+            
+            
 
         </div>
     
