--- a/server/public/css/managerstyle.css
+++ b/server/public/css/managerstyle.css
@@ -1238,3 +1238,76 @@ form{
     padding-bottom: 2vh;
 }
 
+.parcellist{
+    width: 50vw;
+}
+
+.parcellist .itens-container div{
+    margin: 2vh 0;
+    
+}
+
+.parcellist .itens-container .list-container div{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.parcellist button{
+    width: 100%;
+    height: 3vw;
+    background-color: #a14418;
+    border: none;
+    border-radius: 0.5vh;
+}
+
+.parcellist button:hover{
+    cursor: pointer;
+    transform: scale(1.05);
+    transition: 0.5s; 
+}
+
+#get-parcel-list{
+    background-color: rgba(255, 255, 255, 0.095);
+    width: calc(100% - 6vh);
+    height: 10vh;
+    border-radius: 3px;
+    
+    padding: 3vh;
+    position: relative;
+    
+}
+
+#ul-parcel-list{
+    position: relative;
+    width: 100%;
+    height: 100%;
+    overflow-y: scroll;
+}
+
+#ul-parcel-list li{
+    width: 95%;
+    display: flex;
+    justify-content: space-between;
+    
+}
+
+#ul-parcel-list li div{
+    font-size: 2vh;
+    width: 6vw;
+}
+
+.program input[type=text]{
+    border: none;
+    height: 4vh;
+    font-size: 2vh;
+    border-radius: 0.5vh;
+    padding: 0 1vh;
+}
+
+.program textarea{
+    width: 100%;
+    border: none;
+}
+
